--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Ha ocurrido un error</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
 </head>
 <body>
-
+    <h2>¡Ha ocurrido un error!</h2>
+    <div th:text="${error}"></div>
+    <div th:text="${message}"></div>
+    <div th:text="${status}"></div>
+    <div th:text="${timestamp}"></div>
+    <div th:text="${trace}"></div> <!-- No muestra el trace !-->
 </body>
 </html>
